--- a/Pesquisa_App/Pesquisa_App/Index.html
+++ b/Pesquisa_App/Pesquisa_App/Index.html
@@ -13,18 +13,20 @@
 </head>
 <body>
     <div class="table_pesquisa" id="locationField">
-        <h1> Passagens Aéreas</h1>
-        <div ng-form="options">
+        <svg height="22" width="22" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22 22">                    <path fill="#ffffff" fill-rule="evenodd" d="M 21.13 0.09 C 20.43 0.36 19.67 0.67 19.07 1.14 L 14.92 4.65 L 2.21 1.97 L 0.66 3.49 L 10.45 9.09 L 5.53 15.03 L 1.66 13.85 L 0 15.39 L 3.69 17.26 L 3.37 17.67 C 3.18 17.84 3.2 18.41 3.37 18.61 C 3.57 18.78 4.13 18.79 4.31 18.61 L 4.71 18.28 L 6.61 22 L 8.15 20.34 L 6.96 16.46 L 12.92 11.65 L 18.37 21.24 L 19.9 19.68 L 17.27 7.21 L 20.84 2.93 C 21.31 2.34 21.63 1.57 21.9 0.87 C 22.18 0.17 21.83 -0.18 21.13 0.09 L 21.13 0.09 Z M 21.13 0.09"></path> </svg>
+        <span class="span_table"> Passagens Aéreas</span>
+
+        <div class="opcoes" ng-form="options">
             <input type="radio"  checked="checked" />
             <a>Ida e volta</a>
         </div>
         
         <br />
        <div ng-form="localidades">
-           <label>Ida:</label>
-           <input id="ida-input" onfocus="geolocate()" type="text" placeholder="Origem"  class="input_localidades"/>
-           <label>Volta:</label>
-           <input id="volta-input" onfocus="geolocate_volta()" type="text" placeholder="Destino" class="input_localidades" />
+           <label>Origem:</label>
+           <input id="origem-input" onfocus="geolocate()" type="text" placeholder="Origem"  class="input_localidades"/>
+           <label>Destino:</label>
+           <input id="destino-input" onfocus="geolocate_volta()" type="text" placeholder="Destino" class="input_localidades" />
        </div>
         <div ng-form="Datas">
             <p></p>
@@ -41,7 +43,7 @@
             Pesquisar
         
         </button>
-
+        <p></p>
     </div>
 
     <script>
